--- a/SistemaUTH/SistemaUTH/Views/Categorias/Delete.cshtml
+++ b/SistemaUTH/SistemaUTH/Views/Categorias/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Borrar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro que deseas eliminar esta categoria?</h3>
 <div>
     <h4>Categoria</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CategoriaID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Borrar" class="btn btn-default" /> |
+        <a asp-action="Index">Regresar a listado</a>
     </form>
 </div>
