--- a/SistemaUTH/SistemaUTH/Views/Categorias/Index.cshtml
+++ b/SistemaUTH/SistemaUTH/Views/Categorias/Index.cshtml
@@ -77,7 +77,7 @@
    <div class="row">
        <div class="col-sm-1">
            <a asp-action="Index" asp-route-sortOrder="@ViewData["CurrentSort"]" asp-route-page="(@Model.PageIndex-1)"
-              asp-route-currentFilter="@ViewData["CurrentFilter"]" class="btn btn-danger @preDisabled">Previa</a>
+              asp-route-currentFilter="@ViewData["CurrentFilter"]" class="btn btn-default @preDisabled">Anterior</a>
        </div>
        <div class="col-sm-10">
            @for (int i = 1; i < Model.TotalPage; i++)
@@ -88,7 +88,7 @@
        </div>
        <div class="col-sm-1">
            <a asp-action="Index" asp-route-sortOrder="@ViewData["CurrentSort"]" asp-route-page="(@Model.PageIndex+1)"
-              asp-route-currentFilter="@ViewData["CurrentFilter"]" class="btn btn-success @nextDisabled">Next</a>
+              asp-route-currentFilter="@ViewData["CurrentFilter"]" class="btn btn-default @nextDisabled">Siguiente</a>
        </div>
 
    </div>
