--- a/SistemaUTH/SistemaUTH/Views/Shared/_Layout.cshtml
+++ b/SistemaUTH/SistemaUTH/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a asp-area="" asp-controller="Categorias" asp-action="">Categorias</a></li>
                     <li><a asp-area="" asp-controller="Estudiantes" asp-action="Index">Estudiantes</a></li>
                     <li><a asp-area="" asp-controller="Clases" asp-action="Index">Clases</a></li>
-                    <li><a asp-area="" asp-controller="Instructores" asp-action="Index">Instructores</a></li>
+                    <li><a asp-area="" asp-controller="Instructors" asp-action="Index">Instructores</a></li>
                     <li><a asp-area="" asp-controller="Asignaciones" asp-action="Index">Asignaciones</a></li>
                     <li><a asp-area="" asp-controller="Matricula" asp-action="Index">Matriculas</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Acerca de..</a></li>
